LAB-K8S-06/solutions/tests/03-service.yml
kind: Service
apiVersion: v1
metadata:
  name: my-todo-deployment
spec:
  selector:
    app: simple-todo
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
